Archive2/81/d1d8771e7b4f12/output
main.cpp:18:15: error: unknown type name 'p1'
        const p1& = &p2;
              ^
main.cpp:18:19: error: expected unqualified-id
        const p1& = &p2;
                  ^
2 errors generated.
